# evo

./: .cursorignore  .gitignore  AGENTS.md  BOTTLENECK_ANALYSIS.md  Cargo.toml  DEPLOYMENT.md  DRIFT_ANALYSIS.md  GPU_ACCELERATION.md  GPU_SPATIAL_PERFORMANCE_REVIEW.md  LARGE_SCALE_PERFORMANCE.md  MILLION_SCALE_OPTIMIZATION.md  OPTIMIZATION_RESULTS.md  PERFORMANCE_BREAKTHROUGH.md  PERFORMANCE_GUIDE.md  PERFORMANCE_OPTIMIZATIONS_100K.md  PROFILING_SUMMARY.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  WEB_IMPLEMENTATION_GUIDE.md  WEB_README.md  app.js  build-and-fix.sh  build-desktop.sh  build-web.sh  config.json  config_10000.json  config_100000.json  config_100000_fast.json  config_large.json  example_config.json  fix-worker-imports.sh  index.html  justfile  package-lock.json  package.json  run.sh  rust-toolchain.toml  server.js  setup.sh  (+2 more)
.cargo/: config.toml
.cursor/rules/: robs-rules.mdc
.github/workflows/: ci-cd.yml
.husky/: pre-commit
benches/: simulation_benchmark.rs
docs/: DEPLOYMENT.md  SIMULATION_SYSTEM.md
profiling_output/: analysis.txt  performance_report.md
scripts/: build-and-fix.sh  build-web.sh  deploy.sh  gpu_benchmark.sh  profile.sh  quick_profile.sh  run.sh  setup.sh
src/: batch_processor.rs  components.rs  config.rs  genes.rs  gpu_movement_system.rs  gpu_simulation.rs  gpu_spatial_benchmark.rs  gpu_spatial_system.rs  gpu_test.rs  hybrid_simulation.rs  lib.rs  main.rs  memory_mapped_storage.rs  movement_shader.wgsl  profiler.rs  quadtree.rs  shader.wgsl  simulation.rs  spatial_grid.rs  spatial_hash.rs  spatial_query_shader.wgsl  spatial_system.rs  stats.rs  systems.rs  test_graphics.rs  ui.rs
src/config/: mod.rs  tests.rs
src/genes/: mod.rs  tests.rs
src/simulation/: mod.rs  tests.rs
src/stats/: mod.rs  tests.rs
src/systems/: energy.rs  interaction.rs  mod.rs  reproduction.rs
src/systems/interaction/: mod.rs  tests.rs
src/systems/movement/: mod.rs  tests.rs
src/ui/: mod.rs  state.rs
src/web/: controls.rs  mod.rs  renderer.rs  wasm_bridge.rs  webgpu.rs
web/: _headers  index.html  server.js  server.py
web/css/: style.css
web/js/: app.js
workers-site/: index.js
