[package]
name = "evo"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core simulation
hecs = "0.9"
rayon = "1.8"
rand = "0.8"

# Graphics and UI
wgpu = "0.19"
winit = "0.29"
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }

# Utilities
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
