[package]
name = "evo"
version = "0.1.0"
edition = "2021"
description = "A beautiful and performant evolution simulation with GPU-accelerated graphics"
license = "MIT"
repository = "https://github.com/rgilks/evo"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core simulation
hecs = "0.9"
rayon = "1.8"
rand = { version = "0.8", features = ["getrandom"] }
getrandom = { version = "0.2", features = ["js"] }

# Graphics and UI
wgpu = "0.19"
winit = "0.29"
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }

# Utilities
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.8"

# WebAssembly support
wasm-bindgen = "0.2"
wasm-bindgen-rayon = "1.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Window",
    "CanvasRenderingContext2d",
    "Performance",
    "Blob",
    "Url",
    "Worker",
    "WorkerGlobalScope",
    "MessageEvent",
    "DedicatedWorkerGlobalScope",
] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-rayon = "1.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "s"   # Optimize for size in WASM
lto = true
codegen-units = 1
panic = "abort"
