[package]
name = "evo"
version = "0.1.0"
edition = "2021"
description = "A beautiful and performant evolution simulation with GPU-accelerated graphics"
license = "MIT"
repository = "https://github.com/rgilks/evo"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# Core simulation
hecs = "0.9"
rayon = "1.8"
rand = { version = "0.8", features = ["getrandom"] }
getrandom = { version = "0.2", features = ["js"] }
indexmap = "=2.2.6" # Pin version to avoid E0658 with our toolchain
dashmap = "5.5"

# Graphics - match galacto version
wgpu = { version = "24.0", features = ["webgl"] }
bytemuck = { version = "1.14", features = ["derive"] }

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WebAssembly support
wasm-bindgen = "0.2"
wasm-bindgen-rayon = "1.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "HtmlCanvasElement",
    "Window",
    "Document",
    "Element",
    "console",
] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
raw-window-handle = { version = "0.6", features = ["wasm-bindgen-0-2"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
parking_lot = { version = "0.12", features = ["nightly"] }
instant = { version = "0.1", features = ["wasm-bindgen"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dev-dependencies]
tempfile = "3.8"
